New website header

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -103,7 +103,7 @@ a:hover
 	width: 760px;
 	height: 125px;
 	border-bottom: 1px solid #669900; 
-	background-image:url('../images/header.gif');
+	background-image:url('../images/header.jpg');
 }
 
 #header p
