--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -12,20 +12,20 @@
 		
 		<div id="menu">
 			<ul>
-				<li><a title="Home" id="home" href="index.jsp">Home</a></li><li>|</li>
-				<li><a title="Ingresar" id="login" href="login.jsp">Ingresar</a></li><li>|</li>
-				<li><a title="Saludos" id="hello" href="saludos.jsp">Saludos</a></li>
+				<li><a title="Home" id="home" href="/">Home</a></li><li>|</li>
+				<li><a title="Ingresar" id="login" href="#">Ingresar</a></li><li>|</li>
+				<li><a title="Saludos" id="hello" href="#">Saludos</a></li>
 				<li>|</li>
-				<li><a title="Muro" id="wall" href="Wall">Muro</a></li><li>|</li>
-				<li><a title="Imagenes" id="images" href="pictures.jsp">Imagenes</a></li><li>|</li>
-				<li><a title="Usuarios" id="users" href="ListaUsuarios?type=1">Usuarios</a></li><li>|</li>
-				<li><a title="Cuenta" id="account" href="cuenta.jsp">Cuenta</a></li><li>|</li>
-				<li><a title="Salir" id="exit" href="Exit">Salir</a></li>
+				<li><a title="Muro" id="wall" href="#">Muro</a></li><li>|</li>
+				<li><a title="Imagenes" id="images" href="#">Imagenes</a></li><li>|</li>
+				<li><a title="Usuarios" id="users" href="#">Usuarios</a></li><li>|</li>
+				<li><a title="Cuenta" id="account" href="#">Cuenta</a></li><li>|</li>
+				<li><a title="Salir" id="exit" href="#">Salir</a></li>
 			</ul>
 		</div>
 	
 		<div id="header">
-			<p><a title="website name" href="index.jsp">{{title}}</a></p>
+			<p><a title="website name" href="/">{{title}}</a></p>
 		</div>
 		
 		<div id="content">
