--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,43 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="es">
-<!-- this template was designed by http://www.tristarwebdesign.co.uk - please visit for more templates & information - thank you. -->
-<head>
-<title>{{title}}</title>
-<meta charset="utf-8" />
-</head>
-<body>
-
-<div id="border">
-	<div id="container">
-		
-		<div id="menu">
-			<ul>
-				<li><a title="Home" id="home" href="/">Home</a></li><li>|</li>
-				<li><a title="Ingresar" id="login" href="#">Ingresar</a></li><li>|</li>
-				<li><a title="Saludos" id="hello" href="#">Saludos</a></li>
-				<li>|</li>
-				<li><a title="Muro" id="wall" href="#">Muro</a></li><li>|</li>
-				<li><a title="Imagenes" id="images" href="#">Imagenes</a></li><li>|</li>
-				<li><a title="Usuarios" id="users" href="#">Usuarios</a></li><li>|</li>
-				<li><a title="Cuenta" id="account" href="#">Cuenta</a></li><li>|</li>
-				<li><a title="Salir" id="exit" href="#">Salir</a></li>
-			</ul>
-		</div>
-	
-		<div id="header">
-			<p><a title="website name" href="/">{{title}}</a></p>
-		</div>
-		
-		<div id="content">
-    </div>
-
-		<div id="footer">
-			<p><a title="Tristar Website Design" href="http://www.webdesignlondon-tristar.co.uk/" target="_blank">Web Design by Tristar</a>.
-				Developed by <a href="http://cl.linkedin.com/in/crirojas" target="_blank">Cristi&aacute;n Rojas</a>.</p>
-		</div>
-
-	</div>
+<div>
+  <form #todoForm= "ngForm"(submit)="todoSubmit(todoForm.value); todoForm.resetForm()" >
+    <p>
+      Nombre: <input #username type="text" name="text" ngModel><br />
+      Password: <input type="password" name="password" id="password" /><br />
+      <input type="submit" name="submitButton" id="submitButton" value="Ingresar" />
+    </p>
+  </form>
 </div>
-
-</body>
-</html>
