Applied Aves UI

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,12 +1,24 @@
 
-<header>
-  <div class="container">
-    <nav>
-      <li><a href="#" routerLink="/">Home</a></li>
-      <li><a href="#" routerLink="/users">Usuarios</a></li>
-      <li><a href="#" routerLink="/posts">Mensajes</a></li>
-    </nav>
-  </div>
-</header>
+<div id="border">
+	<div id="container">
+		
+		<div id="menu">
+			<ul>
+				<li><a href="#" routerLink="/">Home</a></li><li>|</li>
+				<li><a href="#" routerLink="/posts">Muro</a></li><li>|</li>
+				<li><a href="#" routerLink="/users">Usuarios</a></li><li>|</li>
+			</ul>
+		</div>
+	
+		<div id="header">
+			<p><a title="website name" href="index.jsp">Fans de las aves chilenas</a></p>
+		</div>
+		
+		<div id="content">
+      <router-outlet></router-outlet>
+    </div>
 
-<router-outlet></router-outlet>
+	<div id="footer">
+		<p><a title="Tristar Website Design" href="http://www.webdesignlondon-tristar.co.uk/" target="_blank">Web Design by Tristar</a>.
+			Developed by <a href="http://cl.linkedin.com/in/crirojas" target="_blank">Cristi&aacute;n Rojas</a>.</p>
+	</div>
