Some HTML changes

--- a/angular-app/src/app/posts/posts.component.html
+++ b/angular-app/src/app/posts/posts.component.html
@@ -1,6 +1,6 @@
 <form>
-  <input type='text' name='mensaje' id='mensaje' size='70'>
-  <input type='submit' value='Postear'>
+  <input type="text" name="mensaje" id="mensaje" size="70">
+  <input type="submit" value="Postear">
 </form>
 
 <span *ngIf="posts">
