--- a/angular-app/src/app/posts/posts.component.html
+++ b/angular-app/src/app/posts/posts.component.html
@@ -1,5 +1,5 @@
-<form>
-  <input type="text" name="mensaje" id="mensaje" size="70">
+<form [formGroup]="postForm" (ngSubmit)="onSubmit()">
+  <input type="text" formControlName="mensaje" size="70">
   <input type="submit" value="Postear">
 </form>
 
