--- a/angular-app/src/app/posts/posts.component.html
+++ b/angular-app/src/app/posts/posts.component.html
@@ -3,6 +3,8 @@
   <input type="submit" value="Postear">
 </form>
 
+<p>&nbsp;</p>
+
 <span *ngIf="posts">
   <span *ngFor="let post of posts">
     <p class="name">{{ post.message }}</p>
