--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -13,8 +13,7 @@
 		</div>
 
 		<div id="footer">
-			<p><a title="Tristar Website Design" href="http://www.webdesignlondon-tristar.co.uk/" target="_blank">Web Design by Tristar</a>.
-				Developed by <a href="https://cl.linkedin.com/in/crirojas" target="_blank">Cristi&aacute;n Rojas</a>.</p>
+			<p>Developed by <a href="https://cl.linkedin.com/in/crirojas" target="_blank">Cristi&aacute;n Rojas</a>.</p>
 		</div>
 	</div>
 </div>
