--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -13,7 +13,7 @@
 		</div>
 
 		<div id="footer">
-			<p>Developed by <a href="https://cl.linkedin.com/in/crirojas" target="_blank">Cristi&aacute;n Rojas</a>.</p>
+			<p>Developed by <a href="https://cl.linkedin.com/in/crirojas" target="_blank" rel="noopener noreferrer">Cristi&aacute;n Rojas</a>.</p>
 		</div>
 	</div>
 </div>
