--- a/angular-app/src/app/menu/menu.component.html
+++ b/angular-app/src/app/menu/menu.component.html
@@ -2,5 +2,6 @@
     <ul>
         <li><a href="#" routerLink="/">Home</a></li><li>|</li>
         <li><a href="#" routerLink="/posts">Muro</a></li><li>|</li>
+        <li><a href="#" (click)="logout()">Salir</a></li>
     </ul>
 </div>
