--- a/angular-app/src/app/menu/menu.component.html
+++ b/angular-app/src/app/menu/menu.component.html
@@ -1,7 +1,10 @@
 <div id="menu">
     <ul>
-        <li><a href="#" routerLink="/">Home</a></li><li>|</li>
-        <li><a href="#" routerLink="/posts">Muro</a></li><li>|</li>
-        <li><a href="#" (click)="logout()">Salir</a></li>
+        <li><a href="#" routerLink="/">Home</a></li>
+        <span *ngIf="isLoggedIn()">
+            <li>|</li>
+            <li><a href="#" routerLink="/posts">Muro</a></li><li>|</li>
+            <li><a href="#" (click)="logout()">Salir</a></li>
+        </span>
     </ul>
 </div>
