--- a/angular-app/src/app/posts/posts.component.html
+++ b/angular-app/src/app/posts/posts.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="postForm" (ngSubmit)="onSubmit()">
-  <input type="text" formControlName="mensaje" size="70">
+  <input type="text" formControlName="mensaje" size="50" required >
   <input type="submit" value="Postear">
 </form>
 
